findSingleBySpecification